@@ -7,9 +7,13 @@ import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class CustomClassLoader {
+    private static final Logger logger = LoggerFactory.getLogger(CustomClassLoader.class);
+
     private CustomClassLoader() {
     }
 
@@ -18,17 +22,17 @@ public class CustomClassLoader {
                 .stream()
                 .map(String::trim)
                 .filter(line -> !line.isEmpty() && !line.startsWith("#"))
-                .collect(Collectors.toList());
+                .toList();
 
         List<URL> urls = new ArrayList<>();
         for (String jarPath : jarPaths) {
             File jarFile = new File(jarPath);
             if (!jarFile.exists()) {
-                System.err.println("Warning: JAR file not found: " + jarPath);
+                logger.error("Error: JAR file not found: {}", jarPath);
                 continue;
             }
             urls.add(jarFile.toURI().toURL());
-            System.out.println("Loaded JAR: " + jarPath);
+            logger.info("Loaded JAR: {}", jarPath);
         }
 
         return new URLClassLoader(urls.toArray(new URL[0]), Thread.currentThread().getContextClassLoader());
